--- a/views/edit.pug
+++ b/views/edit.pug
@@ -8,17 +8,17 @@ block styles
 block tools
   +tools('edit', page.wikiname)
 
-block content
+block contents
 
   #content.edit
     +errors()
     +warning()
     h1 Edit page
 
-    form(action='#{page.urlForEditPut()}', method='post', class='edit')
+    form(action=page.urlForEditPut(), method='post', class='edit')
 
       .form-group
-        input.form-control(rquired, type='text', placeholder='Enter the page title', name='pageTitle', value="#{coalesce(formData.pageTitle, '')}")#pageTitle
+        input.form-control(rquired, type='text', placeholder='Enter the page title', name='pageTitle', value=coalesce(formData.pageTitle, ''))#pageTitle
         input(type="hidden", name="_method", value="put")
 
       .form-group
