--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ include mixins/links.pug
   html
     head
       meta(charset="utf-8")
-      meta(name="generator", content="jingo #{jingoVersion}")
+      meta(name="generator", content="jingo" + jingoVersion)
       meta(name="viewport", content="width=device-width, initial-scale=1")
       title= title
       +asset("/vendor/bootstrap/css/bootstrap.min.css")
@@ -24,9 +24,9 @@ include mixins/links.pug
           .navbar-header
             +anchor("/", appTitle).navbar-brand
             if canSearch()
-              form(action="#{proxyPath}/search").navbar-form.search.navbar-left
+              form(action=proxyPath + "/search").navbar-form.search.navbar-left
                 .input-group.input-group-sm.search
-                  input.form-control(type="text", value="#{term_ph}", data-i-search-input="true",name="term",placeholder="Search the wiki")
+                  input.form-control(type="text", value=term_ph, data-i-search-input="true",name="term",placeholder="Search the wiki")
                   span.input-group-btn
                     button.btn.btn-primary(type="submit") Search
             .navbar-right
@@ -54,7 +54,7 @@ include mixins/links.pug
             .col-md-2
 
           #main.hide-tools.col-md-8
-            block content
+            block contents
 
         if hasFooter()
           .row
