--- a/views/list.pug
+++ b/views/list.pug
@@ -1,37 +1,37 @@
 extends layout.pug
 
-block content
+block contents
   #content.show
-    h1 Document list – Most recent updates shown first
+    h1 Document list – Most recent updates shown first: #{items.length}
     ul.doc-list
       each item in items
         li
           h4
-            a(href="#{item.page.urlForShow()}") #{item.page.title}
+            a(href=item.page.urlForShow()) #{item.page.title}
           div.content.clearfix
             .meta
               |Last update by&nbsp;
               if item.page.metadata.email && item.page.metadata.email != 'jingouser'
                 img(src=gravatar().url("#{item.page.metadata.email}", {s:16}))
               b &nbsp;#{item.page.metadata.author},&nbsp;
-              b.date(title="#{item.page.metadata.date}") #{item.page.metadata.relDate}
+              b.date(title=item.page.metadata.date) #{item.page.metadata.relDate}
               |&nbsp;&ndash;&nbsp;#{item.page.metadata.hash}
             ul.page-actions
               if !isAnonymous()
                 li
-                  a(href="#{item.page.urlForEdit()}", title="Edit this page").btn.btn-default
+                  a(href=item.page.urlForEdit(), title="Edit this page").btn.btn-default
                     i.icon.ion-compose
               li
-                a(href="#{item.page.urlForHistory()}", title="Page history").btn.btn-default
+                a(href=item.page.urlForHistory(), title="Page history").btn.btn-default
                   i.icon.ion-clock
               if item.hashes
                 li
-                  a(href="#{item.page.urlForCompare()}/" + item.hashes, title="Quick diff").btn.btn-default
+                  a(href=item.page.urlForCompare() + "/" + item.hashes, title="Quick diff").btn.btn-default
                     i.icon.ion-shuffle
             .message
               |&rarr; #{item.page.lastCommitMessage}
 
     ul.paginator
       each pageNumber in pageNumbers
-        li(class="#{pageNumber == pageCurrent ? 'current' : ''}")
-          a(href="?page=#{pageNumber}") #{pageNumber}
+        li(class=pageNumber == pageCurrent ? 'current' : '')
+          a(href="?page=" + pageNumber) #{pageNumber}
