Update search result view
Add results count

--- a/views/search.pug
+++ b/views/search.pug
@@ -18,8 +18,8 @@ block contents
               button.btn.btn-primary(type="submit") Search
 
       if (term)
-        h2 #{title} for&nbsp;
-          b.page-param #{term}
+        h2 #{title} for:&nbsp;
+          b.page-param '#{term}'&nbsp;&nbsp;(#{matches.length} results)
 
       dl.search-results
         each match in matches
