--- a/public/css/style.css
+++ b/public/css/style.css
@@ -312,12 +312,11 @@ code {
 }
 
 code.md-code {
-  background-color: transparent;
+  background-color: #f7f7f9;
   white-space: nowrap;
   padding: 0;
   display: block;
   margin-bottom: 20px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   border-width: 0;
 }
 
