Add smooth scrolling according to the toc

--- a/views/show.pug
+++ b/views/show.pug
@@ -22,3 +22,19 @@ block contents
     |,&nbsp;
     b(title=page.metadata.date) #{page.metadata.relDate}&nbsp;
     | &ndash; #{page.metadata.hash}
+
+block scripts
+  script.
+    $(document).ready(function(){
+      $("#toc a").on("click", function (event) {
+        if (this.hash !== "") {
+          event.preventDefault();
+
+          var hash = this.hash;
+
+          $("html, body").animate({scrollTop: $(hash).offset().top}, 800, function () {
+                                  window.location.hash = hash});
+        }
+      });
+    });
+    
