Disable bootstrap-toc outside page views
Fixes #17

--- a/views/compare.pug
+++ b/views/compare.pug
@@ -3,7 +3,7 @@ extends layout.pug
 block contents
 
   #content.compare
-    h2 Compare two revisions of:&nbsp;
+    h2(data-toc-skip) Compare two revisions of:&nbsp;
       b.page-param #{page.title}
 
     ul.nav.nav-pills
