--- a/views/create.pug
+++ b/views/create.pug
@@ -8,7 +8,7 @@ block styles
 block contents
   #content
     +errors()
-    h1 Create a new page
+    h1(data-toc-skip) Create a new page
 
     form(action=proxyPath + '/pages', method='post', class='edit')
 
