--- a/views/edit.pug
+++ b/views/edit.pug
@@ -13,7 +13,7 @@ block contents
   #content.edit
     +errors()
     +warning()
-    h1 Edit page
+    h1(data-toc-skip) Edit page
 
     form(action=page.urlForEditPut(), method='post', class='edit')
 
