--- a/views/history.pug
+++ b/views/history.pug
@@ -7,7 +7,7 @@ block tools
 
 block contents
   #content.show
-    h2 Revisions of:&nbsp;
+    h2(data-toc-skip) Revisions of:&nbsp;
       b.page-param #{page.title}
     p
       button(id="rev-compare", data-pageName=page.name).btn.btn-primary Compare revisions
