--- a/views/mixins/form.pug
+++ b/views/mixins/form.pug
@@ -106,6 +106,6 @@ mixin dialogBox(h)
     .modal-content
       .modal-header
         button(data-dismiss="modal",aria-hidden="true").close &times;
-        h3 #{h}
+        h3(data-toc-skip) #{h}
       .modal-body
       .modal-footer
