--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,7 +93,8 @@ blockquote {
   padding-right: 15px;
   color: #553;
   font-size: 14px;
-  border-left-color: #e6f1f6
+  border-left-color: #b0d5e6;
+  background-color: #e6f1f6;
 }
 
 blockquote p:before {
@@ -323,6 +324,13 @@ code.md-code {
   display: block;
   margin-bottom: 20px;
   border-width: 0;
+  border-left: 5px solid #eee;
+  border-left-color: #ccc;
+  border-radius: 0px;
+}
+
+.md-code div {
+  border-radius: 0px;
 }
 
 code.md-code code {
