--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,7 @@ include mixins/links.pug
       title= title
       +asset("/vendor/bootstrap/css/bootstrap.min.css")
       +asset("/vendor/bootstrap-toc/bootstrap-toc.min.css")
+      +asset("/vendor/font-awesome/css/font-awesome.min.css")
       link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed")
       +asset("/css/style.css")
       +asset("/css/ionicons.min.css")
