Fix gravatar problems
Fix syntax of url parameter passing from Pug templates

Fixes #1

--- a/views/history.pug
+++ b/views/history.pug
@@ -19,7 +19,7 @@ block contents
             input(type="checkbox", value=item.hashRef)
           td
             if item.email
-              img(src=gravatar().url("#{item.email}", {s:16}))
+              img(src=gravatar().url(item.email, {s:16}))
               |&nbsp;
             |#{item.author}
           td #{item.relDate}
