--- a/views/layout.pug
+++ b/views/layout.pug
@@ -38,7 +38,7 @@ include mixins/links.pug
               else
                 p.user
                   if user.email && user.email != 'jingouser'
-                    img(src=gravatar().url("#{user.email}", {s:24}))
+                    img(src=gravatar().url(user.email, {s:24}))
                   b &nbsp;#{user.displayName}&nbsp;
                   +anchor('/logout')(title='Become anonymous')
                     i.icon.ion-power
