--- a/views/show.pug
+++ b/views/show.pug
@@ -17,7 +17,7 @@ block contents
 
   p(class=isAjax ? 'jingo-footer' : 'footer') Updated by&nbsp;
     if page.metadata.email && page.metadata.email != 'jingouser'
-      img(src=gravatar().url("#{page.metadata.email}", {s:16}))
+      img(src=gravatar().url(page.metadata.email, {s:16}))
     b  #{page.metadata.author}
     |,&nbsp;
     b(title=page.metadata.date) #{page.metadata.relDate}&nbsp;
