--- a/public/css/style.css
+++ b/public/css/style.css
@@ -742,4 +742,76 @@ span.arrow:before {
     top: 41px;
     left: 60%;
   }
+
+  #wrapper {
+    padding-left: 0px;
+  }
+
+  #wrapper.toggled {
+    padding-left: 170px;
+  }
+
+  #sidebar-wrapper {
+    width: 250px;
+  }
+
+  #wrapper.toggled #sidebar-wrapper {
+    width: 0;
+  }
+
+  #page-content-wrapper {
+    padding: 20px;
+  }
+
+  #wrapper.toggled #page-content-wrapper {
+    position: relative;
+    margin-right: 0;
+  }
+}
+
+
+/* Sidebar toggle */
+#wrapper {
+  padding-left: 0;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+  padding-left: 170px;
+}
+
+#sidebar-wrapper {
+  position: fixed;
+  left: 170px;
+  z-index: 1000;
+  overflow-y: auto;
+  margin-left: -170px;
+  width: 0;
+  height: 100%;
+  padding-top: 15px;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+  width: 170px;
+}
+
+#page-content-wrapper {
+  padding: 15px;
+  width: 100%;
+}
+
+#wrapper.toggled #page-content-wrapper {
+  position: absolute;
+  margin-right: -170px;
+}
+
+div.sidebar-content {
+  margin-left: 10px;
 }
