--- a/views/show.pug
+++ b/views/show.pug
@@ -15,7 +15,14 @@ block contents
     .jingo-content.jingo-show
       !=content
 
-  p(class=isAjax ? 'jingo-footer' : 'footer') Updated by&nbsp;
+  p(class=isAjax ? 'jingo-footer' : 'footer') Created by:&nbsp;&nbsp;
+    if page.createData.email && page.createData.email != 'jingouser'
+      img(src=gravatar().url(page.createData.email, {s:16}))
+    b  #{page.createData.author}
+    |,&nbsp;
+    b  #{page.createData.date}
+    br
+    | Updated by:&nbsp;&nbsp;
     if page.metadata.email && page.metadata.email != 'jingouser'
       img(src=gravatar().url(page.metadata.email, {s:16}))
     b  #{page.metadata.author}
