--- a/views/show.pug
+++ b/views/show.pug
@@ -3,7 +3,10 @@ extends layout.pug
 include mixins/form.pug
 
 block tools
-  +tools('show', page.wikiname)
+  if page
+    +tools('show', page.wikiname)
+  else
+    +tools('show', null)
 
 block contents
   if !isAjax
@@ -15,20 +18,21 @@ block contents
     .jingo-content.jingo-show
       !=content
 
-  p(class=isAjax ? 'jingo-footer' : 'footer') Created by:&nbsp;&nbsp;
-    if page.createData.email && page.createData.email != 'jingouser'
-      img(src=gravatar().url(page.createData.email, {s:16}))
-    b  #{page.createData.author}
-    |,&nbsp;
-    b  #{page.createData.date}
-    br
-    | Updated by:&nbsp;&nbsp;
-    if page.metadata.email && page.metadata.email != 'jingouser'
-      img(src=gravatar().url(page.metadata.email, {s:16}))
-    b  #{page.metadata.author}
-    |,&nbsp;
-    b(title=page.metadata.date) #{page.metadata.relDate}&nbsp;
-    | &ndash; #{page.metadata.hash}
+  if page
+    p(class=isAjax ? 'jingo-footer' : 'footer') Created by:&nbsp;&nbsp;
+      if page.createData.email && page.createData.email != 'jingouser'
+        img(src=gravatar().url(page.createData.email, {s:16}))
+      b  #{page.createData.author}
+      |,&nbsp;
+      b  #{page.createData.date}
+      br
+      | Updated by:&nbsp;&nbsp;
+      if page.metadata.email && page.metadata.email != 'jingouser'
+        img(src=gravatar().url(page.metadata.email, {s:16}))
+      b  #{page.metadata.author}
+      |,&nbsp;
+      b(title=page.metadata.date) #{page.metadata.relDate}&nbsp;
+      | &ndash; #{page.metadata.hash}
 
 block scripts
   script.
