--- a/views/404.pug
+++ b/views/404.pug
@@ -1,7 +1,7 @@
 extends layout
 
-block content
+block contents
   #content
     .jumbotron
-      h1 #{title}
+      h1(data-toc-skip) #{title}
       p The requested resource is not available
