Remove deprecated auth method

--- a/views/login.pug
+++ b/views/login.pug
@@ -49,7 +49,7 @@ block contents
             |&nbsp;or&nbsp;
             +anchor("/", 'Cancel')
 
-    if (auth.alone.enabled || auth.local.enabled)
+    if (auth.local.enabled)
 
       p
         h4(data-toc-skip) Authenticate locally
