--- a/public/css/style.css
+++ b/public/css/style.css
@@ -718,7 +718,36 @@ span.arrow:before {
   text-align: center;
   padding-right: 5px;
   padding-left: 5px;
-  
+}
+
+dl, dt, dd {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-weight: inherit;
+    font-style: inherit;
+    font-family: inherit;
+    font-size: 100%;
+    vertical-align: baseline;
+}
+
+.show dt {
+  text-transform: uppercase;
+  font-family: "Ubuntu Condensed";
+  font-weight: bold;
+  line-height: 100%;
+  color: #7f8c8d;
+  letter-spacing: 0.02em;
+}
+
+.show dd {
+  border-left: 2px solid #ecf0f1;
+  padding-left: 20px;
+  color: #95a5a6;
+  margin-top: 10px;
+  margin-bottom: 1.5em;
+  line-height: 1.5em;
 }
 
 @media (min-width: 768px) {
