--- a/views/500.pug
+++ b/views/500.pug
@@ -1,8 +1,8 @@
 extends layout
 
-block content
+block contents
   #content
     .jumbotron
-      h2 #{title}
+      h2(data-toc-skip) #{title}
       pre.discrete #{error}
       p #{message}
