--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -5,5 +5,9 @@ block contents
   #content
     .jumbotron
       h1(data-toc-skip) Welcome to the wiki
-      p This page doesn't (yet) exist. You should first <a href="#{proxyPath}/login">login</a> and then you'll be redirected to the editor so that you can create the front page.
-      p <a class="btn btn-primary btn-large" href="#{proxyPath}/login">Login</a> and start adding content!
+      if isAnonymous()
+        p This page doesn't (yet) exist. You should first <a href="#{proxyPath}/login">login</a> and then you'll be redirected to the editor so that you can create the front page.
+        p <a class="btn btn-primary btn-large" href="#{proxyPath}/login">Login</a> and start adding content!
+      else
+        p This page doesn't (yet) exist. You should <a href="#{proxyPath}/pages/new">create</a> your first page.
+        p <a class="btn btn-primary btn-large" href="#{proxyPath}/pages/new">Create</a> and start adding content!
