--- a/views/create.pug
+++ b/views/create.pug
@@ -20,13 +20,16 @@ block contents
       .form-group
         textarea.form-control(name="content", data-widearea="enable", rows=25)#editor #{coalesce(formData.content, '')}
 
-      +saveAndCancel()
+      +saveAndCancel("Create", null, "Jingo.create()")
 
   #preview(tabindex="-1",role="dialog",aria-hidden="true").modal
     +dialogBox("Page preview")
 
   #syntax-reference(tabindex="-1",role="dialog",aria-hidden="true").modal
     +dialogBox("Markdown cheatsheet")
+
+  #message-box(tabindex="-1",role="dialog",aria-hidden="true").modal
+    +dialogBox("Message")
 
 block scripts
   +featuresJavaScripts()
